9. added texts and dockerized and added swagger
