# src/main/resources/static/openapi.yml
@@ -61,6 +61,8 @@ paths:
     get:
       tags:
         - User management and registration
+      security:
+        - bearerAuth: [ ]
       description: Получение анкеты пользователя
       parameters:
         - name: id
@@ -89,6 +91,8 @@ paths:
       tags:
         - User management and registration
       description: Поиск анкет
+      security:
+        - bearerAuth: [ ]
       parameters:
         - name: first_name
           schema:
@@ -126,7 +130,7 @@ paths:
       tags:
         - Friends management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: user_id
           schema:
@@ -149,7 +153,7 @@ paths:
       tags:
         - Friends management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: user_id
           schema:
@@ -172,7 +176,7 @@ paths:
       tags:
         - Post management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -185,7 +189,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PostText'
+                $ref: '#/components/schemas/Post'
         '400':
           $ref: '#/components/responses/400'
         '401':
@@ -199,7 +203,7 @@ paths:
       tags:
         - Post management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -223,7 +227,7 @@ paths:
       tags:
         - Post management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: id
           schema:
@@ -271,7 +275,7 @@ paths:
       tags:
         - Post management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: offset
           schema:
@@ -313,7 +317,7 @@ paths:
       tags:
         - Dialogs management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: user_id
           schema:
@@ -342,7 +346,7 @@ paths:
       tags:
         - Dialogs management
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       parameters:
         - name: user_id
           schema:
@@ -558,4 +562,5 @@ components:
     bearerAuth:
       type: http
       scheme: bearer
+      bearerFormat: JWT
       description: Авторизация по токену, который был получен в методе /login
